--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h6 {
 }
 
 a {
-  color: #1e1e1e;
+  color: #cc5600;
   transition: all 0.5s ease-in-out;
 }
 
@@ -248,11 +248,11 @@ a:hover {
   height: 100px;
   width: 100px;
   font-size: 2rem;
-  border-radius: 50%;
+  border-radius: 30%;
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #ff8e00;
+  box-shadow: 0 0 0 3px #ff8e00;
   display: block;
 }
 
@@ -1223,7 +1223,7 @@ a:hover {
 .box-comments,
 .widget-sidebar {
   padding: 2rem;
-  background-color: #fff;
+  background-color: #101010;
   margin-bottom: 3rem;
 }
 
@@ -1265,7 +1265,7 @@ a:hover {
 }
 
 .blog-wrapper .post-meta ul span {
-  color: #1e1e1e;
+  color: #cecece;
 }
 
 .blog-wrapper .blockquote {
