--- a/privacy/templates/policy_voodoo.mustache
+++ b/privacy/templates/policy_voodoo.mustache
@@ -1,3 +1,33 @@
+<!-- this file is a Mustache template for the all the policies that we have -->
+
+<!-- ======= Header/ Navbar ======= -->
+<nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+  <div class="container">
+    <a href="#page-top"><img src="../assets/img/joyixir-logo.png" height="45px" /></a>
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll active" href="{{homepage_url}}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll" href="{{homepage_url}}#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll" href="{{homepage_url}}#games">Games</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll" href="{{homepage_url}}#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div class="intro intro-single route bg-image" style="background-image: url(../assets/img/overlay-bg.jpg)">
   <div class="overlay-mf"></div>
   <div class="intro-content display-table">
@@ -130,3 +160,25 @@
   </section><!-- End Blog Single Section -->
 
 </main><!-- End #main -->
+
+<!-- ======= Footer ======= -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="copyright-box">
+          <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+          <div class="credits">
+            <!--
+            All the links in the footer should remain intact.
+            You can delete the links only if you purchased the pro version.
+            Licensing information: https://bootstrapmade.com/license/
+            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
+          -->
+            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer><!-- End  Footer -->
