Update template breadcrumb urls.

--- a/privacy/templates/policy_voodoo.mustache
+++ b/privacy/templates/policy_voodoo.mustache
@@ -36,10 +36,10 @@
         <h2 class="intro-title mb-4">Privacy Policy</h2>
         <ol class="breadcrumb d-flex justify-content-center">
           <li class="breadcrumb-item">
-            <a href="https://joyixir.com">Home</a>
+            <a href="{{homepage_url}}">Home</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="joyixir.com/privacy">Privacy Policies</a>
+            <a href="{{homepage_url}}/privacy">Privacy Policies</a>
           </li>
           <li class="breadcrumb-item active">{{ name }}</li>
         </ol>
