Add adjust to voodoo template

--- a/privacy/templates/policy_voodoo.mustache
+++ b/privacy/templates/policy_voodoo.mustache
@@ -123,6 +123,7 @@
               <ul>
               <li>GameAnalytics</li>
               <li>Facebook Analytics</li>
+              <li>Adjust</li>
               <li>Voodoo</li>
               </ul>
               <p><strong>Data deletion requests</strong></p>
@@ -141,6 +142,14 @@
               <ul>
               <li>email: none, please refer to the privacy policy</li>
               <li>privacy policy: <a href="https://www.facebook.com/policy.php">https://www.facebook.com/policy.php</a></li>
+              </ul>
+              </li>
+              </ul>
+              <ul>
+              <li>Adjust:
+              <ul>
+              <li>email: <a href="mailto:privacy@adjust.com">privacy@adjust.com</a></li>
+              <li>privacy policy: <a href="https://www.adjust.com/terms/privacy-policy/">https://www.adjust.com/terms/privacy-policy/</a></li>
               </ul>
               </li>
               </ul>
