Add boomhits link to boomhits privacy template

--- a/privacy/templates/policy_boomhit.mustache
+++ b/privacy/templates/policy_boomhit.mustache
@@ -77,6 +77,7 @@
               <li><a href="https://policies.google.com/privacy?hl=en">Google AdMob</a></li>
               <li><a href="https://www.appsflyer.com/legal/services-privacy-policy/">AppsFlyer</a></li>
               <li><a href="https://firebase.google.com/support/privacy">Firebase</a></li>
+              <li><a href="https://boomhits.com/boomhits-privacy-policy/">BoomHits</a></li>
               </ul>
               <h3>Log Data</h3>
               <p>We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (&ldquo;IP&rdquo;) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.&nbsp;</p>
@@ -153,6 +154,14 @@
               </ul>
               </li>
               </ul>
+              <ul>
+              <li>BoomHits:
+              <ul>
+              <li>email: <a href="mailto:privacy@boombit.com">privacy@boombit.com</a></li>
+              <li>privacy policy: <a href="https://boomhits.com/boomhits-privacy-policy/">https://boomhits.com/boomhits-privacy-policy/</a></li>
+              </ul>
+              </li>
+              </ul>  
             </div>
           </div>
         </div>
