Ignore privacy pages from being indexed

--- a/privacy/templates/template_for_python_script.html
+++ b/privacy/templates/template_for_python_script.html
@@ -11,6 +11,7 @@
   engages thousands of people.">
   <meta content="" name="joyixir, joy, elixir, video games, game, games,
               mobile-games, studio, casual games, hc games, hyper-casual games">
+  <meta name="robots" content="noindex">
 
   <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
